<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/eventDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageView
        android:id="@+id/detailsImageView"
        android:layout_width="match_parent"
        android:layout_height="224dp"
        android:background="@drawable/ic_loading_icon" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="30sp"
                android:text="@string/titleEvent"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textDesc"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="30sp"
                android:layout_marginRight="30sp"
                android:text="@string/desc"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/txtVenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="30sp"
                android:layout_marginRight="30sp"
                android:text="@string/venuedetails"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/txtDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="30sp"
                android:layout_marginRight="30sp"
                android:text="@string/datetime"
                android:textSize="22sp" />

            <Button
                android:id="@+id/buttonJoin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:background="@color/colorButton"
                android:text="@string/join_event"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>