<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.RegisterActivity"
    android:layout_margin="25sp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/bored_away"
        android:textColor="@color/colorPrimary"
        android:textSize="45sp"
        android:textStyle="bold"
        app:fontFamily="cursive" />

    <ImageButton
        android:id="@+id/imageButton"
        style="@android:style/Widget.ImageButton"
        android:layout_width="156dp"
        android:layout_height="143dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_app_logo" />

    <EditText
        android:id="@+id/text_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorButton"
        android:drawableLeft="@android:drawable/ic_dialog_email"
        android:drawablePadding="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@color/colorAccent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorButton"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="22dp"
        android:background="@color/colorButton"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_view_login"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textAlignment="center"
        android:text="@string/click_here_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#676767"
        android:textSize="14sp"/>


    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>