<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Fragments.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layoutHead"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorAccent">


            <ImageView
                android:id="@+id/image_view"
                android:layout_width="110dp"
                android:layout_height="105dp"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_app_logo3"
                android:contentDescription="@string/profilePic" />

            <EditText
                android:hint="@string/enter_name"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/image_view"
                tools:text="Dear Yuki"
                android:enabled="true"
                android:id="@+id/edit_text_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

            <ProgressBar
                android:id="@+id/progressbar_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layoutHead"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="top"
                android:background="@color/colorAccent"
                android:drawableLeft="@drawable/ic_email_white_24dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="#FFFFFF"
                tools:text="yuki_ch99@live.com" />

            <TextView
                android:id="@+id/text_not_verified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="9dp"
                android:text="@string/not_verified_click_to_verify"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/text_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="top"
                android:layout_marginBottom="20dp"
                android:background="@color/colorAccent"
                android:drawableLeft="@drawable/ic_call_white_24dp"
                android:enabled="true"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="#FFFFFF"
                tools:text="+60102756970" />

            <TextView
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="top"
                android:layout_marginBottom="20dp"
                android:background="@color/colorAccent"
                android:drawableLeft="@drawable/ic_lock_open_white_24dp"
                android:drawablePadding="16dp"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/change_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="#FFFFFF" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/colorButton"
                android:text="@string/save_changes"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>